Existe um error nas rotas, ao qual não está encontrando.

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -14,7 +14,7 @@
             <ul>
                 <li><a href="/">home</a></li>
                 <li><a href="/api/users">Register</a></li>
-                <li><a href="table.ejs">Users</a></li>
+                <li><a href="/api/users/table">Users</a></li>
             </ul>
         </div>
     </header>
