Correção nas rotas e limpeza no arquivo routes/user.js

--- a/views/home.ejs
+++ b/views/home.ejs
@@ -12,23 +12,37 @@
     <header>
         <div class="options">
             <ul>
-                <li><a href="/">home</a></li>
+                <li><a href="/">Home</a></li>
                 <li><a href="/api/users">Register</a></li>
                 <li><a href="/api/users/table">Users</a></li>
             </ul>
         </div>
     </header>
     <div class="container">
-        <h1>Hello, world!</h1>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dignissimos cum rerum beatae consequuntur excepturi
-            quo, porro impedit maiores culpa, a iusto possimus ut. Esse ipsum voluptatem dolor in ipsa molestias!</p>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dignissimos cum rerum beatae consequuntur excepturi
-            quo, porro impedit maiores culpa, a iusto possimus ut. Esse ipsum voluptatem dolor in ipsa molestias!</p>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dignissimos cum rerum beatae consequuntur excepturi
-            quo, porro impedit maiores culpa, a iusto possimus ut. Esse ipsum voluptatem dolor in ipsa molestias!</p>
-        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. Dignissimos cum rerum beatae consequuntur excepturi
-            quo, porro impedit maiores culpa, a iusto possimus ut. Esse ipsum voluptatem dolor in ipsa molestias!</p>
-
+        <div class="intro">
+            <h1>Bem-vindo ao Sistema de Gerenciamento de Usuários</h1>
+            <p>
+                Este projeto foi desenvolvido para demonstrar um sistema básico de cadastro e visualização de usuários. 
+                Com uma interface intuitiva e funcionalidades eficientes, você pode:
+            </p>
+            <ul>
+                <li>Cadastrar novos usuários com facilidade.</li>
+                <li>Visualizar os usuários cadastrados em uma tabela organizada.</li>
+                <li>Editar ou remover usuários conforme necessário.</li>
+            </ul>
+            <p>
+                Este sistema utiliza as seguintes tecnologias:
+            </p>
+            <ul>
+                <li><strong>Node.js</strong>: Para o backend robusto e eficiente.</li>
+                <li><strong>Express.js</strong>: Para a criação e gerenciamento de rotas.</li>
+                <li><strong>File System (FS)</strong>: Para armazenar os dados localmente.</li>
+                <li><strong>EJS</strong>: Para criar templates dinâmicos e interativos.</li>
+            </ul>
+            <p>
+                Explore as funcionalidades disponíveis e veja como a integração dessas tecnologias proporciona uma solução simples e eficaz para o gerenciamento de dados de usuários!
+            </p>
+        </div>
     </div>
 </body>
 
