--- a/views/table.ejs
+++ b/views/table.ejs
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/home.css">
+    <link rel="stylesheet" href="/table.css">
     <title>View all users</title>
 </head>
 
@@ -12,7 +13,7 @@
     <header>
         <div class="options">
             <ul>
-                <li><a href="/">home</a></li>
+                <li><a href="/">Home</a></li>
                 <li><a href="/api/users">Register</a></li>
                 <li><a href="/api/users/table">Users</a></li>
             </ul>
@@ -35,6 +36,7 @@
                             <td><%= user.id %></td>
                             <td><%= user.username %></td>
                             <td><%= user.email %></td>
+                            <td><%= user.password %></td>
                         </tr>
                     <% }); %>
                 <% } %>
